# QFM

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp  qfmmainwindow.cpp  qfmmainwindow.h  qfmmainwindow.ui
server/: CMakeLists.txt  main.cpp  qfmserver.cpp  qfmserver.h
spec/Screen sequence/: QFM_Screen_Sequence.tex  StartPage.tex  Titlepage.tex
